# gpt-oss-20b-probing

./: .dockerignore  ADVANCED_PROBS.md  DOCKER.md  DOCKERHUB_README.md  Dockerfile  OVERVIEW-LIGHT.md  OVERVIEW.md  README.md  RESULTS_GUIDE.md  build_and_publish.py  build_docker.sh  docker-compose.yml  main.py  publish_docker.sh  pyproject.toml  test_cli.py
examples/: run_gpt_oss_20b.py
src/gpt20b_redteam/: README.md  __init__.py  cli.py  config.py  logger.py  model_wrapper.py  runner.py
src/gpt20b_redteam/probes/: base.py  covert_channel_capacity.py  cross_probe_compounding.py  deception_rewardhack.py  encoding_evasion.py  long_horizon_sleeper.py  prefix_steering.py  refusal_boundary_cartography.py  sabotage_code.py  tokenizer_frequency_sandbagging.py
